--- a/pertemuan-02/emmet.html
+++ b/pertemuan-02/emmet.html
@@ -6,8 +6,15 @@
     <title>Document</title>
 </head>
 <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <header>
+        <h1></h1>
+        <nav>
+            <ul>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
