--- a/pertemuan-02/emmet.html
+++ b/pertemuan-02/emmet.html
@@ -16,5 +16,15 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <section>
+            <h2></h2>
+            <p></p>
+        </section>
+        <section>
+            <h2></h2>
+            <p></p>
+        </section>
+    </main>
 </body>
 </html>
