--- a/pertemuan-02/emmet.html
+++ b/pertemuan-02/emmet.html
@@ -17,13 +17,13 @@
         </nav>
     </header>
     <main>
-        <section>
+        <section id="home">
             <h2>Selamat Datang</h2>
-            <p>Ini contoh paragraf HTML</p>
+            <p>Ini contoh paragraf HTML.</p>
         </section>
-        <section>
+        <section id="about">
             <h2>Tentang Kami</h2>
-            <p>HTML digunakan untuk membuat struktur halaman Web</p>
+            <p>HTML digunakan untuk membuat struktur halaman Web.</p>
         </section>
     </main>
 </body>
