--- a/pertemuan-02/emmet.html
+++ b/pertemuan-02/emmet.html
@@ -25,6 +25,10 @@
             <h2>Tentang Kami</h2>
             <p>HTML digunakan untuk membuat struktur halaman Web.</p>
         </section>
+        <section id="Contact">
+            <h2>Kontak Saya</h2>
+            <p>HTML Form</p>
+        </section>
     </main>
 </body>
 </html>
