footer dan html entity

--- a/pertemuan-02/emmet.html
+++ b/pertemuan-02/emmet.html
@@ -30,5 +30,8 @@
             <p>HTML Form</p>
         </section>
     </main>
+    <footer>
+        <p>&copy; &#9786; 2025 Catherine Audreylia Diony 2522500060</p>
+    </footer>
 </body>
 </html>
