--- a/pertemuan-02/emmet.html
+++ b/pertemuan-02/emmet.html
@@ -23,18 +23,15 @@
         </section>
         <section id="about">
             <h2>Tentang Kami</h2>
-            <p>Halo! Nama saya <strong>Catherine Audreylia Diony</strong> </p>
-            <p><b>NIM:</b> 2522500060</p>
-            <p><b>Tempat Lahir:</b> Pangkalpinang</p>
-            <p><b>Tanggal Lahir:</b> 30 Juni 2007</p>
-            <p><b>Hobi:</b> Olahraga &amp; Menonton Drakor</p>
-            <p><b>Pasangan:</b> Belum ada &#128521;</p>
-            <p><b>Pekerjaan:</b> Mahasiswa</p>
-            <p><b>Nama Ayah:</b> Bong sui Kong</p>
-            <p><b>Nama Ibu:</b> Susanti</p>
-            <p><b>Nama Kakak:</b> Yohan &amp; Nicholas</p>
-            <p><b>Nama Adik:</b> Calvin &amp; Justin</p>
-            <p>&#128522; Senang bisa belajar HTML! &hearts;</p>
+            <p>
+            Halo! Nama saya <b>Catherine Audreylia Diony</b> dengan NIM <b>2522500060</b>. 
+            Saya lahir di <b>Pangkalpinang</b> pada tanggal <b>30 Juni 2007</b>. 
+            Hobi saya adalah Olahraga &amp; Menonton Drakor. 
+            Saat ini saya masih <em>belum memiliki pasangan</em> &#128521; dan bekerja sebagai seorang <b>mahasiswa</b>. 
+            Ayah saya bernama <b>Bong Sui Kong</b> dan ibu saya <b>Susanti</b>. 
+            Saya memiliki kakak bernama <b>Yohan &amp; Nicholas</b> dan adik bernama <b>Calvin &amp; Justin</b>. 
+            Saya sangat senang bisa belajar HTML! &#128522; &hearts;
+            </p>
         </section>
         <section id="Contact">
             <h2>Kontak Saya</h2>
