--- a/pertemuan-02/emmet.html
+++ b/pertemuan-02/emmet.html
@@ -24,12 +24,12 @@
         <section id="about">
             <h2>Tentang Kami</h2>
             <p>
-            Halo! Nama saya <b>Catherine Audreylia Diony</b> dengan NIM <b>2522500060</b>. 
-            Saya lahir di <b>Pangkalpinang</b> pada tanggal <b>30 Juni 2007</b>. 
+            Halo! Nama saya <b>Catherine Audreylia Diony</b> dengan NIM 2522500060. 
+            Saya lahir di Pangkalpinang pada tanggal 30 Juni 2007. 
             Hobi saya adalah Olahraga &amp; Menonton Drakor. 
-            Saat ini saya masih <em>belum memiliki pasangan</em> &#128521; dan bekerja sebagai seorang <b>mahasiswa</b>. 
-            Ayah saya bernama <b>Bong Sui Kong</b> dan ibu saya <b>Susanti</b>. 
-            Saya memiliki kakak bernama <b>Yohan &amp; Nicholas</b> dan adik bernama <b>Calvin &amp; Justin</b>. 
+            Saat ini saya masih <em>belum memiliki pasangan</em> &#128521; dan bekerja sebagai seorang mahasiswa. 
+            Ayah saya bernama Bong Sui Kong dan ibu saya Susanti. 
+            Saya memiliki kakak bernama Yohan &amp; Nicholas dan adik bernama Calvin &amp; Justin. 
             Saya sangat senang bisa belajar HTML! &#128522; &hearts;
             </p>
         </section>
