--- a/pertemuan-02/emmet.html
+++ b/pertemuan-02/emmet.html
@@ -28,8 +28,8 @@
             Saya lahir di Pangkalpinang pada tanggal 30 Juni 2007. 
             Hobi saya adalah Olahraga &amp; Menonton Drakor. 
             Saat ini saya masih <em>belum memiliki pasangan</em> &#128521; dan bekerja sebagai seorang mahasiswa. 
-            Ayah saya bernama Bong Sui Kong dan ibu saya Susanti. 
-            Saya memiliki kakak bernama Yohan &amp; Nicholas dan adik bernama Calvin &amp; Justin. 
+            Ayah saya bernama Bong Sui Kong dan Ibu saya bernama Susanti. 
+            Saya memiliki kakak bernama Yohan &amp; Nicholas. serta adik bernama Calvin &amp; Justin. 
             Saya sangat senang bisa belajar HTML! &#128522; &hearts;
             </p>
         </section>
