--- a/pertemuan-02/emmet.html
+++ b/pertemuan-02/emmet.html
@@ -22,16 +22,17 @@
             <p>Ini contoh paragraf HTML.</p>
         </section>
         <section id="about">
-            <h2>Tentang Kami</h2>
-            <p>
-            Halo! Nama saya <b>Catherine Audreylia Diony</b> dengan NIM 2522500060. 
-            Saya lahir di Pangkalpinang pada tanggal 30 Juni 2007. 
-            Hobi saya adalah Olahraga &amp; Menonton Drakor. 
-            Saat ini saya masih <em>belum memiliki pasangan</em> &#128521; dan bekerja sebagai seorang mahasiswa. 
-            Ayah saya bernama Bong Sui Kong dan Ibu saya bernama Susanti. 
-            Saya memiliki kakak bernama Yohan &amp; Nicholas. serta adik bernama Calvin &amp; Justin. 
-            Saya sangat senang bisa belajar HTML! &#128522; &hearts;
-            </p>
+            <h2>Tentang Saya</h2>
+            <p><strong>NIM:</strong> 2522500060</p>
+            <p><strong>Nama Lengkap:</strong> Catherine Audreylia Diony &#128526;</p>
+            <p><strong>Tempat Lahir:</strong> Pangkalpinang</p>
+            <p><strong>Tanggal Lahir:</strong> 30 Juni 2007</p>
+            <p><strong>Hobi:</strong> Olahraga &amp; Menonton Drakor &#128512;</p>
+            <p><strong>Pasangan:</strong> Belum ada &hearts;</p>
+            <p><strong>Pekerjaan:</strong> Mahasiswa &copy; 2025</p>
+            <p><strong>Nama Orang Tua:</strong> Bapak Bong Sui Kong dan Ibu Susanti</p>
+            <p><strong>Nama Kakak:</strong> Yohan dan Nicholas</p>
+            <p><strong>Nama Adik:</strong> Calvin dan Justin</p>
         </section>
         <section id="Contact">
             <h2>Kontak Saya</h2>
