menambahkan input type color

--- a/pertemuan-03/index.html
+++ b/pertemuan-03/index.html
@@ -88,6 +88,7 @@
         <section id="Contact">
             <h2>Kontak Saya</h2>
             <form action="" method="get">
+                <input type="color"
                 <label for="txtNama">Nama:</label>
                 <input type="text" id="txtNama" name="txtNama" placeholder="Masukkan Nama" required autocomplete="name">
 
