--- a/pertemuan-03/index.html
+++ b/pertemuan-03/index.html
@@ -54,76 +54,125 @@
             }
         }
 
+    <style>
+
+    <style> 
         #contact {
-            background: linear-gradient(135deg, #e0f7fa, #ffffff);
-            padding: 40px;
-            border-radius: 12px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+            background: radial-gradient(circle at top left, #1e1f29, #121212);
+            color: #e0e0e0;
             width: 60%;
-            margin: 40px auto;
+            margin: 50px auto;
+            padding: 40px 50px;
+            border-radius: 20px;
+            box-shadow: 0 0 25px rgba(0, 255, 255, 0.2);
             font-family: 'Poppins', sans-serif;
+            position: relative;
+            overflow: hidden;
+        }
+
+        #contact::before {
+            content: "";
+            position: absolute;
+            top: -50%;
+            left: -50%;
+            width: 200%;
+            height: 200%;
+            background: conic-gradient(from 90deg,
+                    rgba(0, 255, 255, 0.4),
+                    rgba(255, 0, 255, 0.3),
+                    rgba(0, 255, 255, 0.4));
+            animation: rotate 8s linear infinite;
+            z-index: 0;
+            filter: blur(60px);
+        }
+
+        @keyframes rotate {
+            0% {
+                transform: rotate(0deg);
+            }
+
+            100% {
+                transform: rotate(360deg);
+            }
+        }
+
+        #contact * {
+            position: relative;
+            z-index: 1;
         }
 
         #contact h2 {
             text-align: center;
-            color: #00796b;
-            margin-bottom: 20px;
-            letter-spacing: 1px;
-        }
-
-        #contact form {
-            display: flex;
-            flex-direction: column;
-            gap: 16px;
+            color: #00e5ff;
+            text-shadow: 0 0 10px #00e5ff;
+            margin-bottom: 25px;
+            letter-spacing: 1.5px;
         }
 
         #contact label {
-            font-weight: bold;
-            color: #004d40;
+            font-weight: 600;
+            color: #b39ddb;
+            display: block;
+            margin-bottom: 5px;
         }
 
         #contact input[type="text"],
         #contact input[type="email"],
         #contact input[type="color"],
         #contact textarea {
-            padding: 10px 14px;
-            border: 1.5px solid #00796b;
-            border-radius: 6px;
-            font-size: 14px;
-            transition: 0.3s;
+            width: 100%;
+            padding: 12px 15px;
+            border-radius: 10px;
+            border: 2px solid #4a148c;
+            background-color: rgba(255, 255, 255, 0.1);
+            color: #ffffff;
+            font-size: 15px;
+            transition: all 0.3s ease;
         }
 
         #contact input:focus,
         #contact textarea:focus {
             outline: none;
-            border-color: #004d40;
-            background-color: #e0f2f1;
+            border-color: #00e5ff;
+            box-shadow: 0 0 10px #00e5ff;
+            background-color: rgba(255, 255, 255, 0.15);
         }
 
         #contact button {
-            padding: 10px 16px;
+            padding: 12px 18px;
             border: none;
-            border-radius: 6px;
-            cursor: pointer;
+            border-radius: 10px;
             font-weight: bold;
+            font-size: 15px;
             color: white;
-            transition: 0.3s;
+            cursor: pointer;
+            transition: all 0.3s ease;
         }
 
         #contact button[type="submit"] {
-            background-color: #00796b;
+            background: linear-gradient(90deg, #00e5ff, #7c4dff);
+            box-shadow: 0 0 15px rgba(0, 229, 255, 0.5);
         }
 
         #contact button[type="submit"]:hover {
-            background-color: #004d40;
+            transform: scale(1.05);
+            box-shadow: 0 0 20px #00e5ff, 0 0 30px #7c4dff;
         }
 
         #contact button[type="reset"] {
-            background-color: #b0bec5;
+            background: linear-gradient(90deg, #757575, #9e9e9e);
         }
 
         #contact button[type="reset"]:hover {
-            background-color: #78909c;
+            transform: scale(1.05);
+            box-shadow: 0 0 15px #9e9e9e;
+        }
+
+        @media (max-width: 700px) {
+            #contact {
+                width: 90%;
+                padding: 30px;
+            }
         }
 
     </style>
