--- a/pertemuan-03/index.html
+++ b/pertemuan-03/index.html
@@ -53,8 +53,114 @@
                 margin-bottom: 2px;
             }
         }
-
     </style>
+
+    <style>
+        /* Styling khusus untuk section#contact */
+        #contact {
+            background: linear-gradient(135deg, #6dd5ed, #2193b0);
+            color: #fff;
+            font-family: "Poppins", sans-serif;
+            padding: 50px 20px;
+            border-radius: 20px;
+            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
+            max-width: 600px;
+            margin: 50px auto;
+            animation: fadeIn 1.2s ease-in-out;
+        }
+
+        /* Animasi masuk */
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(40px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        #contact h2 {
+            text-align: center;
+            margin-bottom: 25px;
+            font-size: 2em;
+            letter-spacing: 1px;
+            text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
+        }
+
+        #contact form {
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+        }
+
+        /* Label dan Input */
+        #contact label {
+            font-weight: bold;
+            margin-bottom: 5px;
+        }
+
+        #contact input[type="text"],
+        #contact input[type="email"],
+        #contact input[type="color"],
+        #contact textarea {
+            border: none;
+            border-radius: 10px;
+            padding: 12px;
+            font-size: 1em;
+            width: 100%;
+            outline: none;
+            transition: all 0.3s ease;
+        }
+
+        #contact input[type="text"]:focus,
+        #contact input[type="email"]:focus,
+        #contact textarea:focus {
+            box-shadow: 0 0 8px rgba(255, 255, 255, 0.8);
+            transform: scale(1.02);
+        }
+
+        /* Tombol */
+        #contact button {
+            padding: 12px;
+            font-size: 1em;
+            border: none;
+            border-radius: 10px;
+            cursor: pointer;
+            font-weight: bold;
+            letter-spacing: 1px;
+            transition: all 0.3s ease;
+        }
+
+        #contact button[type="submit"] {
+            background-color: #00c6ff;
+            color: white;
+        }
+
+        #contact button[type="reset"] {
+            background-color: #ff6b6b;
+            color: white;
+        }
+
+        #contact button:hover {
+            opacity: 0.9;
+            transform: translateY(-2px);
+        }
+
+        /* Responsif */
+        @media (max-width: 600px) {
+            #contact {
+                padding: 30px 15px;
+            }
+
+            #contact h2 {
+                font-size: 1.6em;
+            }
+        }
+    </style>
+
 </head>
 
 <body>
