--- a/pertemuan-03/index.html
+++ b/pertemuan-03/index.html
@@ -155,7 +155,6 @@
             }
         }
     </style>
-
 </head>
 
 <body>
@@ -190,15 +189,15 @@
         <section id="Contact">
             <h2>Kontak Saya</h2>
             <form action="" method="get">
-                <input type="color" <label for="txtNama">Nama:</label>
-                <input type="text" id="txtNama" name="txtNama" placeholder="Masukkan Nama" required autocomplete="name">
+                <input type="color">
+                <label for="txtNama">Nama:</label>
+                <input maxlength="10" type="text" id="txtNama" name="txtNama" placeholder="Masukkan Nama" required autocomplete="name">
 
                 <label for="txtEmail">Email:</label>
-                <input type="email" id="txtEmail" name="txtEmail" placeholder="Masukkan email" required
-                    autocomplete="email">
+                <input type="email" id="txtEmail" name="txtEmail" placeholder="Masukkan email" required autocomplete="email">
 
                 <label for="txtPesan">pesan:</label>
-                <textarea id="txtPesan" name="txtPesan" rows="4" placeholder="Tulis pesan anda..." required></textarea>
+                <textarea rows="4" id="txtPesan" name="txtPesan" placeholder="Tulis pesan anda..." required></textarea>
 
                 <button type="submit">kirim </button>
                 <button type="reset">Batal </button>
