--- a/pertemuan-03/index.html
+++ b/pertemuan-03/index.html
@@ -164,7 +164,7 @@
             <ul>
                 <li><a href="#home">Beranda</a></li>
                 <li><a href="#about">Tentang</a></li>
-                <li><a href="Contact">Kontak</a></li>
+                <li><a href="#Contact">Kontak</a></li>
             </ul>
         </nav>
     </header>
