styling section contact

--- a/pertemuan-03/index.html
+++ b/pertemuan-03/index.html
@@ -66,18 +66,6 @@
             animation: fadeIn 1.2s ease-in-out;
         }
 
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-                transform: translateY(40px);
-            }
-
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
         #contact h2 {
             text-align: center;
             margin-bottom: 25px;
@@ -92,7 +80,6 @@
             gap: 15px;
         }
 
-        /* Label dan Input */
         #contact label {
             font-weight: bold;
             margin-bottom: 5px;
@@ -100,7 +87,7 @@
 
         #contact input[type="text"],
         #contact input[type="email"],
-        #contact input[type="color"],
+        #contact input[type="pesan"],
         #contact textarea {
             border: none;
             border-radius: 10px;
