--- a/pertemuan-03/index.html
+++ b/pertemuan-03/index.html
@@ -54,7 +54,102 @@
             }
         }
 
+        #Contact {
+            background: linear-gradient(135deg, #e0f7fa, #80deea);
+            padding: 40px;
+            border-radius: 15px;
+            max-width: 500px;
+            margin: 40px auto;
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+            font-family: 'Poppins', sans-serif;
+            color: #004d40;
+        }
+
+        #Contact h2 {
+            text-align: center;
+            margin-bottom: 25px;
+            color: #00695c;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+        }
+
+        #Contact label {
+            display: block;
+            margin-bottom: 6px;
+            font-weight: 600;
+            color: #004d40;
+        }
+
+        #Contact input[type="text"],
+        #Contact input[type="email"],
+        #Contact textarea {
+            width: 100%;
+            padding: 10px 12px;
+            margin-bottom: 18px;
+            border: 2px solid #80cbc4;
+            border-radius: 8px;
+            background-color: #ffffff;
+            transition: all 0.3s ease;
+            font-size: 14px;
+        }
+
+        #Contact input:focus,
+        #Contact textarea:focus {
+            border-color: #009688;
+            box-shadow: 0 0 8px rgba(0, 150, 136, 0.3);
+            outline: none;
+        }
+
+        #Contact button {
+            padding: 10px 25px;
+            border: none;
+            border-radius: 8px;
+            font-weight: bold;
+            cursor: pointer;
+            transition: 0.3s ease;
+        }
+
+        #Contact button[type="submit"] {
+            background-color: #009688;
+            color: white;
+            margin-right: 10px;
+        }
+
+        #Contact button[type="submit"]:hover {
+            background-color: #00796b;
+        }
+
+        #Contact button[type="reset"] {
+            background-color: #e0e0e0;
+            color: #333;
+        }
+
+        #Contact button[type="reset"]:hover {
+            background-color: #bdbdbd;
+        }
+
+        @media (max-width: 480px) {
+            #Contact {
+                padding: 25px;
+            }
+
+            #Contact h2 {
+                font-size: 18px;
+            }
+
+            #Contact input,
+            #Contact textarea {
+                font-size: 13px;
+            }
+
+            #Contact button {
+                width: 100%;
+                margin-bottom: 10px;
+            }
+        }
     </style>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
@@ -91,10 +186,12 @@
             <form action="" method="get">
                 <input type="color">
                 <label for="txtNama">Nama:</label>
-                <input maxlength="10" type="text" id="txtNama" name="txtNama" placeholder="Masukkan Nama" required autocomplete="name">
+                <input maxlength="10" type="text" id="txtNama" name="txtNama" placeholder="Masukkan Nama" required
+                    autocomplete="name">
 
                 <label for="txtEmail">Email:</label>
-                <input type="email" id="txtEmail" name="txtEmail" placeholder="Masukkan email" required autocomplete="email">
+                <input type="email" id="txtEmail" name="txtEmail" placeholder="Masukkan email" required
+                    autocomplete="email">
 
                 <label for="txtPesan">pesan:</label>
                 <textarea rows="4" id="txtPesan" name="txtPesan" placeholder="Tulis pesan anda..." required></textarea>
