memperbaiki input type pesan yang terbalik

--- a/pertemuan-03/index.html
+++ b/pertemuan-03/index.html
@@ -183,9 +183,8 @@
         <section id="Contact">
             <h2>Kontak Saya</h2>
             <form action="" method="get">
-                <input type="color">
                 <label for="txtNama">Nama:</label>
-                <input maxlength="10" type="text" id="txtNama" name="txtNama" placeholder="Masukkan Nama" required
+                <input type="text" id="txtNama" name="txtNama" placeholder="Masukkan Nama" required
                     autocomplete="name">
 
                 <label for="txtEmail">Email:</label>
@@ -193,7 +192,7 @@
                     autocomplete="email">
 
                 <label for="txtPesan">pesan:</label>
-                <textarea rows="4" id="txtPesan" name="txtPesan" placeholder="Tulis pesan anda..." required></textarea>
+                <textarea id="txtPesan" name="txtPesan" rows="4" placeholder="Tulis pesan anda..." required></textarea>
 
                 <button type="submit">kirim </button>
                 <button type="reset">Batal </button>
