--- a/pertemuan-03/index.html
+++ b/pertemuan-03/index.html
@@ -15,6 +15,15 @@
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
 
+        #contact {
+            background-color: #ffffff;
+            border-radius: 10px;
+            padding: 20px;
+            max-width: 700px;
+            margin: 20px auto;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
         #about h2 {
             color: #003366;
             border-bottom: 2px solid #003366;
@@ -53,100 +62,6 @@
                 margin-bottom: 2px;
             }
         }
-
-        #Contact {
-            background: linear-gradient(135deg, #e0f7fa, #80deea);
-            padding: 40px;
-            border-radius: 15px;
-            max-width: 500px;
-            margin: 40px auto;
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
-            font-family: 'Poppins', sans-serif;
-            color: #004d40;
-        }
-
-        #Contact h2 {
-            text-align: center;
-            margin-bottom: 25px;
-            color: #00695c;
-            text-transform: uppercase;
-            letter-spacing: 2px;
-        }
-
-        #Contact label {
-            display: block;
-            margin-bottom: 6px;
-            font-weight: 600;
-            color: #004d40;
-        }
-
-        #Contact input[type="text"],
-        #Contact input[type="email"],
-        #Contact textarea {
-            width: 100%;
-            padding: 10px 12px;
-            margin-bottom: 18px;
-            border: 2px solid #80cbc4;
-            border-radius: 8px;
-            background-color: #ffffff;
-            transition: all 0.3s ease;
-            font-size: 14px;
-        }
-
-        #Contact input:focus,
-        #Contact textarea:focus {
-            border-color: #009688;
-            box-shadow: 0 0 8px rgba(0, 150, 136, 0.3);
-            outline: none;
-        }
-
-        #Contact button {
-            padding: 10px 25px;
-            border: none;
-            border-radius: 8px;
-            font-weight: bold;
-            cursor: pointer;
-            transition: 0.3s ease;
-        }
-
-        #Contact button[type="submit"] {
-            background-color: #009688;
-            color: white;
-            margin-right: 10px;
-        }
-
-        #Contact button[type="submit"]:hover {
-            background-color: #00796b;
-        }
-
-        #Contact button[type="reset"] {
-            background-color: #e0e0e0;
-            color: #333;
-        }
-
-        #Contact button[type="reset"]:hover {
-            background-color: #bdbdbd;
-        }
-
-        @media (max-width: 480px) {
-            #Contact {
-                padding: 25px;
-            }
-
-            #Contact h2 {
-                font-size: 18px;
-            }
-
-            #Contact input,
-            #Contact textarea {
-                font-size: 13px;
-            }
-
-            #Contact button {
-                width: 100%;
-                margin-bottom: 10px;
-            }
-        }
     </style>
 
 </head>
@@ -158,7 +73,7 @@
             <ul>
                 <li><a href="#home">Beranda</a></li>
                 <li><a href="#about">Tentang</a></li>
-                <li><a href="#Contact">Kontak</a></li>
+                <li><a href="#contact">Kontak</a></li>
             </ul>
         </nav>
     </header>
