--- a/pertemuan-03/index.html
+++ b/pertemuan-03/index.html
@@ -91,16 +91,19 @@
         <section id="Contact">
             <h2>Kontak Saya</h2>
             <form action="" method="get">
-                <label for="txtNama">Nama:</label>
+                <label for="txtNama"><span>Nama:</span>
                 <input type="text" id="txtNama" name="txtNama" placeholder="Masukkan Nama" required
-                    autocomplete="name">
+                        autocomplete="name">
+                </label>
 
-                <label for="txtEmail">Email:</label>
+                <label for="txtEmail"><span>Email:</span>
                 <input type="email" id="txtEmail" name="txtEmail" placeholder="Masukkan email" required
                     autocomplete="email">
+                </label>
 
-                <label for="txtPesan">pesan:</label>
+                <label for="txtPesan"><span>Pesan Anda:</span>
                 <textarea id="txtPesan" name="txtPesan" rows="4" placeholder="Tulis pesan anda..." required></textarea>
+                </label>
 
                 <button type="submit">kirim </button>
                 <button type="reset">Batal </button>
