--- a/pertemuan-03/index.html
+++ b/pertemuan-03/index.html
@@ -45,6 +45,18 @@
             flex-shrink: 0;
         }
 
+        #contact input,
+        #contact textarea {
+            flex: 1;
+            border: 1px solid #ccc;
+            border-radius: 6px;
+            padding: 8px;
+            color: #000;
+            font-weight: normal;
+            margin: 0;
+            box-sizing: border-box;
+        }
+
         @media (max-width: 600px) {
             #about p {
                 flex-direction: column;
@@ -90,7 +102,7 @@
             <p><strong>Nama Kakak:</strong> Yohan dan Nicholas</p>
             <p><strong>Nama Adik:</strong> Calvin dan Justin</p>
         </section>
-        <section id="Contact">
+        <section id="contact">
             <h2>Kontak Saya</h2>
             <form action="" method="get">
                 <label for="txtNama"><span>Nama:</span>
