--- a/pertemuan-03/index.html
+++ b/pertemuan-03/index.html
@@ -25,7 +25,7 @@
             margin-bottom: 16px;
         }
 
-        #about p, 
+        #about p,
         #contact label {
             display: flex;
             justify-content: flex-start;
@@ -56,6 +56,19 @@
             margin: 0;
             box-sizing: border-box;
         }
+
+        #contact button {
+            margin-top: 10px;
+            display: inline-block;
+            padding: 10px 24px;
+            font-size: 16px;
+            border-radius: 6px;
+            cursor: pointer;
+            border: none;
+            transition: all 0.3s ease;
+            margin-right: 8px;
+        }
+
 
         @media (max-width: 600px) {
             #about p {
@@ -106,17 +119,18 @@
             <h2>Kontak Saya</h2>
             <form action="" method="get">
                 <label for="txtNama"><span>Nama:</span>
-                <input type="text" id="txtNama" name="txtNama" placeholder="Masukkan Nama" required
+                    <input type="text" id="txtNama" name="txtNama" placeholder="Masukkan Nama" required
                         autocomplete="name">
                 </label>
 
                 <label for="txtEmail"><span>Email:</span>
-                <input type="email" id="txtEmail" name="txtEmail" placeholder="Masukkan email" required
-                    autocomplete="email">
+                    <input type="email" id="txtEmail" name="txtEmail" placeholder="Masukkan email" required
+                        autocomplete="email">
                 </label>
 
                 <label for="txtPesan"><span>Pesan Anda:</span>
-                <textarea id="txtPesan" name="txtPesan" rows="4" placeholder="Tulis pesan anda..." required></textarea>
+                    <textarea id="txtPesan" name="txtPesan" rows="4" placeholder="Tulis pesan anda..."
+                        required></textarea>
                 </label>
 
                 <button type="submit">kirim </button>
