membuat script.js

--- a/pertemuan-05/index.html
+++ b/pertemuan-05/index.html
@@ -66,6 +66,8 @@
     <footer>
         <p>&copy; &#9786; 2025 Catherine Audreylia Diony 2522500060</p>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
