--- a/pertemuan-05/index.html
+++ b/pertemuan-05/index.html
@@ -54,8 +54,8 @@
                 </label>
 
                 <label for="txtPesan"><span>Pesan Anda:</span>
-                    <textarea id="txtPesan" name="txtPesan" rows="4" placeholder="Tulis pesan anda..."
-                        required></textarea>
+                    <textarea id="txtPesan" name="txtPesan" rows="4" placeholder="Tulis pesan anda..." required></textarea>
+                    <small id="charCount">0/200 Karakter</small>
                 </label>
 
                 <button type="submit">kirim </button>
